src/bin/snapshots/cg2exec__cli-11.snap
---
source: src/bin/cg2exec.rs
expression: "cli(\"cg2exec grp cmd extra --\", &mut a)"
---
Ok(
    CliExecCommand {
        cgroup: "grp",
        cmd: "cmd",
        args: [
            "extra",
            "--",
        ],
    },
)
