src/bin/snapshots/cg2exec__cli-12.snap
---
source: src/bin/cg2exec.rs
expression: "cli(\"cg2exec -- -grp -cmd -extra\")"
---
Ok(
    Cli {
        cgroup: "-grp",
        cmd: "-cmd",
        args: [
            "-extra",
        ],
    },
)
