src/bin/snapshots/cg2exec__cli-2.snap
---
source: src/bin/cg2exec.rs
expression: "cli(\"cg2exec grp\")"
---
Err(
    "EarlyExit { output: \"Required positional arguments not provided:\\n    cmd\\n\", status: Err(()) }",
)
