src/bin/snapshots/cg2exec__cli-3.snap
---
source: src/bin/cg2exec.rs
expression: "cli(\"cg2exec grp cmd\", &mut a)"
---
Ok(
    CliExecCommand {
        cgroup: "grp",
        cmd: "cmd",
        args: [],
    },
)
