src/bin/snapshots/cg2exec__cli-5.snap
---
source: src/bin/cg2exec.rs
expression: "cli(\"cg2exec --flag grp cmd\")"
---
Err(
    "EarlyExit { output: \"Unrecognized argument: \\\"--flag\\\". Did you mean \\\"--help\\\"?\\n\", status: Err(()) }",
)
