src/bin/snapshots/cg2exec__cli-6.snap
---
source: src/bin/cg2exec.rs
expression: "cli(\"cg2exec grp --flag cmd\")"
---
Err(
    "Error: Unexpected flag or argument: \"--flag\"\nUsage: cg2exec <CGROUP> <CMD> [ARGS]...\n",
)
