src/bin/snapshots/cg2exec__cli-7.snap
---
source: src/bin/cg2exec.rs
expression: "cli(\"cg2exec grp cmd --flag\")"
---
Ok(
    Cli {
        cgroup: "grp",
        cmd: "cmd",
        args: [
            "--flag",
        ],
    },
)
