src/bin/snapshots/cg2exec__cli-9.snap
---
source: src/bin/cg2exec.rs
expression: "cli(\"cg2exec grp -- cmd extra\")"
---
Err(
    "Error: Unexpected flag or argument: \"--\"\nUsage: cg2exec <CGROUP> <CMD> [ARGS]...\n",
)
