src/bin/snapshots/cg2exec__cli.snap
---
source: src/bin/cg2exec.rs
expression: "cli(\"cg2exec\")"
---
Err(
    "error: the following required arguments were not provided:\n  <CGROUP>\n  <CMD>...\n\nUsage: cg2exec <CGROUP> <CMD>...\n\nFor more information, try '--help'.\n",
)
